--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,17 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<style>
+			@font-face {
+				font-family: 'Pretendard Variable';
+				font-weight: 45 920;
+				font-style: normal;
+				font-display: swap;
+				src: url('%sveltekit.assets%/woff2/PretendardVariable.woff2') format('woff2-variations');
+			}
+		</style>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
